--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/m2_final_project
-spring.datasource.name=m2_final_project
-spring.datasource.username=postgres
-spring.datasource.password=password1
+#CONNECTION TO LOCAL DATABASE
+#spring.datasource.url=jdbc:postgresql://localhost:5432/m2_final_project
+#spring.datasource.name=m2_final_project
+#spring.datasource.username=postgres
+#spring.datasource.password=password1
+
+#CONNECTION TO RAILWAY AND RENDER TO DEPLOY
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 
 jwt.header=Authorization
@@ -16,4 +26,5 @@ jwt.route.authentication.refresh=/refresh
 
 server.error.include-stacktrace=never
 
-server.port=9000
+#server.port=9000
+server.port=${PORT:9000}
