--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,6 +5,7 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=password1
 
+spring.datasource.name={SPRING_DATASOURCE_NAME}
 #CONNECTION TO RAILWAY AND RENDER TO DEPLOY
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
